Updated meta content and removed unnecessary files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="http://yusufr.me" />
 		<meta property="og:image" content="http://yusufr.me/images/WebsiteScreenshot.png" />
-		<meta property="og:description" content="Yusuf R (notyusufr) | 📚💻🎮✈️⚪ Bookworm, coder, gamer. Nomad. Minimalist." />
+		<meta property="og:description" content="Yusuf R (notyusufr) | 📚💻📉✈️🏫 Bookworm, coder, trader. Nomad. Student." />
 		<meta name="theme-color" content="#2196F3">
 		<meta name="twitter:card" content="summary_large_image">
 
